# Devnopes

./: .trivyignore  Dockerfile  README.md  devnopes-0.1.2.tgz  devnopes-0.1.3.tgz  devnopes-0.1.4.tgz  devnopes-0.1.5.tgz  devnopes-0.1.6.tgz  devnopes-0.1.7.tgz  devnopes-0.1.8.tgz  diagnose.py  index.yaml  pyproject.toml
.github/workflows/: bandit.yml  black-duck-security-scan-ci.yml  checkmarx-one.yml  ci.yml  helm-publish.yml  snyk-container.yml  snyk-security.yml  sysdig-scan.yml  trivy.yml
helm/: Chart.yaml  README.md  values.yaml
helm/templates/: _helpers.tpl  clusterrole.yaml  clusterrolebinding.yaml  job.yaml  rbac.yaml  serviceaccount.yaml
k8s/: job.yaml  rbac.yaml
k8s-diagnostics/: Dockerfile  diagnose.py  pyproject.toml
k8s-diagnostics/helm/: Chart.yaml  values.yaml
k8s-diagnostics/helm/templates/: _helpers.tpl  clusterrole.yaml  clusterrolebinding.yaml  job.yaml  serviceaccount.yaml
k8s-diagnostics/k8s/: job.yaml  rbac.yaml
